--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@react-email/components": "^0.5.5",
+    "@react-email/render": "^1.3.1",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.57.4",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "resend": "^6.1.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
