--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
     "@react-email/render": "^1.3.1",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.57.4",
+    "@tiptap/extension-placeholder": "^3.6.5",
+    "@tiptap/react": "^3.6.5",
+    "@tiptap/starter-kit": "^3.6.5",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hot-toast": "^2.6.0",
     "resend": "^6.1.2"
   },
   "devDependencies": {
