--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
     "@react-email/render": "^1.3.1",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.57.4",
-    "@tiptap/extension-placeholder": "^3.6.5",
-    "@tiptap/react": "^3.6.5",
-    "@tiptap/starter-kit": "^3.6.5",
+    "@tiptap/core": "^3.6.6",
+    "@tiptap/extension-bubble-menu": "^3.6.6",
+    "@tiptap/extension-floating-menu": "^3.6.6",
+    "@tiptap/extension-placeholder": "^3.6.6",
+    "@tiptap/pm": "^3.6.6",
+    "@tiptap/react": "^3.6.6",
+    "@tiptap/starter-kit": "^3.6.6",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
     "react": "19.1.0",
