--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@tiptap/core": "^3.6.6",
     "@tiptap/extension-bubble-menu": "^3.6.6",
     "@tiptap/extension-floating-menu": "^3.6.6",
+    "@tiptap/extension-highlight": "^3.7.0",
     "@tiptap/extension-placeholder": "^3.6.6",
+    "@tiptap/extension-text-align": "^3.7.0",
     "@tiptap/pm": "^3.6.6",
     "@tiptap/react": "^3.6.6",
     "@tiptap/starter-kit": "^3.6.6",
