--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "@tiptap/extension-floating-menu": "^3.6.6",
     "@tiptap/extension-highlight": "^3.7.0",
     "@tiptap/extension-placeholder": "^3.6.6",
+    "@tiptap/extension-table": "^3.7.0",
+    "@tiptap/extension-table-cell": "^3.7.0",
+    "@tiptap/extension-table-header": "^3.7.0",
+    "@tiptap/extension-table-row": "^3.7.0",
     "@tiptap/extension-text-align": "^3.7.0",
     "@tiptap/pm": "^3.6.6",
     "@tiptap/react": "^3.6.6",
