--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@tiptap/starter-kit": "^3.6.6",
     "browser-image-compression": "^2.0.2",
     "lucide-react": "^0.544.0",
+    "nanoid": "^5.1.6",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
