--- a/package.json
+++ b/package.json
@@ -17,19 +17,20 @@
     "@react-email/render": "^1.3.1",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.57.4",
-    "@tiptap/core": "^3.6.6",
-    "@tiptap/extension-bubble-menu": "^3.6.6",
-    "@tiptap/extension-floating-menu": "^3.6.6",
-    "@tiptap/extension-highlight": "^3.7.0",
-    "@tiptap/extension-placeholder": "^3.6.6",
-    "@tiptap/extension-table": "^3.7.0",
+    "@tiptap/core": "^3.9.1",
+    "@tiptap/extension-bubble-menu": "^3.9.1",
+    "@tiptap/extension-floating-menu": "^3.9.1",
+    "@tiptap/extension-highlight": "^3.9.1",
+    "@tiptap/extension-link": "^3.9.1",
+    "@tiptap/extension-placeholder": "^3.9.1",
+    "@tiptap/extension-table": "^3.9.1",
     "@tiptap/extension-table-cell": "^3.7.0",
     "@tiptap/extension-table-header": "^3.7.0",
     "@tiptap/extension-table-row": "^3.7.0",
-    "@tiptap/extension-text-align": "^3.7.0",
+    "@tiptap/extension-text-align": "^3.9.1",
     "@tiptap/pm": "^3.6.6",
-    "@tiptap/react": "^3.6.6",
-    "@tiptap/starter-kit": "^3.6.6",
+    "@tiptap/react": "^3.9.1",
+    "@tiptap/starter-kit": "^3.9.1",
     "browser-image-compression": "^2.0.2",
     "lucide-react": "^0.544.0",
     "nanoid": "^5.1.6",
