--- a/package.json
+++ b/package.json
@@ -32,13 +32,16 @@
     "@tiptap/react": "^3.9.1",
     "@tiptap/starter-kit": "^3.9.1",
     "browser-image-compression": "^2.0.2",
+    "canvas-confetti": "^1.9.4",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.544.0",
     "nanoid": "^5.1.6",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
-    "resend": "^6.1.2"
+    "resend": "^6.1.2",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
