make some changes om main page appearance and add some pictures into public. add server.js and make some changes on package.json

--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start",
+    "start": "node server.js",
     "lint": "eslint",
     "tailwind:init": "tailwindcss init -p"
   },
@@ -53,6 +53,6 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
     "tailwindcss": "^4.1.13",
-    "typescript": "^5"
+    "typescript": "5.9.3"
   }
 }
