--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
+    "recharts": "^3.5.0",
     "resend": "^6.1.2",
     "tailwind-merge": "^3.3.1"
   },
@@ -52,6 +53,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
+    "supabase": "^2.58.5",
     "tailwindcss": "^4.1.13",
     "typescript": "5.9.3"
   }
